--- a/app/components/thumbnail/style.scss
+++ b/app/components/thumbnail/style.scss
@@ -1,5 +1,5 @@
 .thumbnail{
-    margin: 0;
+    margin: 0 0 8px 0;
     padding: 0;
     display: flex;
     background: #ffffff;
@@ -41,16 +41,17 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     margin-bottom: 5px;
+    line-height: 20px;
 }
 
 .thumbnail .thumbnail_description .price,.thumbnail .thumbnail_description .people_count{
-    color: #FF5D04;
+    color: #FF5E04;
     font-size: 14px;
 }
 
 .thumbnail .thumbnail_description .bottom{
     height:32px;
-    margin-top: 18px;
+    margin-top: 27px;
     display: flex;
     justify-content:space-between;
 }
