--- a/app/pages/home/style.scss
+++ b/app/pages/home/style.scss
@@ -6,4 +6,17 @@
     width:100%;
     height: 120px;
     background: #cccccc;
+    margin-bottom: 8px;
+}
+
+:global {
+    .slider-frame{
+        height:100% !important;
+        .slider-list{
+            height:100% !important;
+            .slider-slide{
+                height:100% !important;
+            }
+        }
+    }
 }
