--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -3,6 +3,7 @@ body{
     margin: 0;
     padding: 0;
     background: #eeeeee;
+    -webkit-overflow-scrolling: touch
 }
 
 .ping_dan {
@@ -33,3 +34,4 @@ body{
     }
 
 }
+
